# voiceful

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_PROMPT.md  README.md  SKILL.md  SPEC.md  index.html  jobs.json  pyproject.toml
references/: openclaw_apis.md  voice_profile_schema.md
scripts/: __init__.py  config.py  demo.py  llm_client.py  main.py  test_telegram.py
scripts/channels/: telegram.py
scripts/drafters/: __init__.py  base.py  devto.py  hashnode.py  linkedin.py  medium.py  twitter.py
scripts/storage/: __init__.py  history_store.py  queue_store.py  state_store.py  voice_store.py
scripts/triggers/: __init__.py  asked_trigger.py  idle_trigger.py  insight_trigger.py  ship_trigger.py  stuck_trigger.py
scripts/voice/: __init__.py  artifacts.py  profile_builder.py  profile_loader.py  reinforcer.py  stats.py
scripts/watchers/: __init__.py  file_watcher.py  git_watcher.py  notes_watcher.py  terminal_watcher.py
tests/: test_drafters.py  test_e2e.py  test_triggers.py  test_voice_authenticity.py  test_voice_profile.py
training_seed/: blog_post.md  commits.txt  notes.md  tweets.txt
