[project]
name = "voiceful"
version = "0.1.0"
description = "Proactive observational agent that drafts social posts in your authentic voice. Never auto-posts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.6",
    "watchdog>=4.0.2",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
    "pyperclip>=1.9.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39.0"]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
voiceful = "scripts.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts", "scripts.voice", "scripts.drafters", "scripts.watchers", "scripts.triggers", "scripts.channels", "scripts.storage"]
